fix: gap between task list items and between task list divs

--- a/src/styles/taskList.css
+++ b/src/styles/taskList.css
@@ -1,16 +1,17 @@
 .taskList {
   display: flex;
   flex-direction: column;
-  gap: 8px;
+  gap: 12px;
 }
 
 .listItem {
   display: flex;
   flex-direction: column;
+  gap: 8px;
   padding: 8px;
   border-radius: 0.4rem;
   background-color: #e9ecefbe;
-  box-shadow: rgba(149, 157, 165, 0.2) 0px 8px 24px;
+  box-shadow: rgba(149, 157, 165, 0.3) 0px 8px 24px;
 }
 
 .listItem .primary-container {
